--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
 			{% block title %}SCI LA THÉRÈSIÈRE
 			{% endblock %}
 		</title>
-		{% block stylesheets %}{% endblock %}
+		{% block stylesheets %} <link rel="stylesheet" href="{{ asset('css/style.css') }}">{% endblock %}
 
 		{% block javascripts %}
 			{% block importmap %}
