--- a/templates/categorie/show.html.twig
+++ b/templates/categorie/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Categorie{% endblock %}
+{% block title %}Catégories{% endblock %}
 
 {% block body %}
-    <h1>Categorie</h1>
+    <h1>Catégories</h1>
 
     <table class="table">
         <tbody>
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_categorie_index') }}">back to list</a>
+    <a href="{{ path('app_categorie_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">edit</a>
+    <a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
 
     {{ include('categorie/_delete_form.html.twig') }}
 {% endblock %}
