--- a/templates/option/edit.html.twig
+++ b/templates/option/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Option{% endblock %}
+{% block title %}Option{% endblock %}
 
 {% block body %}
-    <h1>Edit Option</h1>
+    <h1>Option</h1>
 
-    {{ include('option/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('option/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('app_option_index') }}">back to list</a>
+    <a href="{{ path('app_option_index') }}">Retour à la liste</a>
 
     {{ include('option/_delete_form.html.twig') }}
 {% endblock %}
