--- a/templates/option/show.html.twig
+++ b/templates/option/show.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Option{% endblock %}
+{% block title %}Options{% endblock %}
 
 {% block body %}
-    <h1>Option</h1>
+    <h1>Options</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ option.id }}</td>
+                {# <th>Id</th>
+                <td>{{ option.id }}</td> #}
             </tr>
             <tr>
                 <th>Nom</th>
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_option_index') }}">back to list</a>
+    <a href="{{ path('app_option_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_option_edit', {'id': option.id}) }}">edit</a>
+    <a href="{{ path('app_option_edit', {'id': option.id}) }}">Modifier</a>
 
     {{ include('option/_delete_form.html.twig') }}
 {% endblock %}
