--- a/templates/reservation/show.html.twig
+++ b/templates/reservation/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reservation{% endblock %}
+{% block title %}Votre réservation{% endblock %}
 
 {% block body %}
-    <h1>Reservation</h1>
+    <h1>Votre réeservation</h1>
 
     <table class="table">
         <tbody>
@@ -38,9 +38,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_reservation_index') }}">back to list</a>
+    <a href="{{ path('app_reservation_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_reservation_edit', {'id': reservation.id}) }}">edit</a>
+    <a href="{{ path('app_reservation_edit', {'id': reservation.id}) }}">Modifier</a>
 
     {{ include('reservation/_delete_form.html.twig') }}
 {% endblock %}
