--- a/templates/visite/show.html.twig
+++ b/templates/visite/show.html.twig
@@ -26,9 +26,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_visite_index') }}">back to list</a>
+    <a href="{{ path('app_visite_index') }}">Retour à la lsite</a>
 
-    <a href="{{ path('app_visite_edit', {'id': visite.id}) }}">edit</a>
+    <a href="{{ path('app_visite_edit', {'id': visite.id}) }}">Modifier</a>
 
     {{ include('visite/_delete_form.html.twig') }}
 {% endblock %}
