--- a/templates/reservation/show.html.twig
+++ b/templates/reservation/show.html.twig
@@ -12,12 +12,12 @@
                 <td>{{ reservation.id }}</td>
             </tr>
             <tr>
-                <th>DateResa</th>
-                <td>{{ reservation.dateResa ? reservation.dateResa|date('Y-m-d') : '' }}</td>
+                <th>DateResaDebut</th>
+                <td>{{ reservation.dateResaDebut ? reservation.dateResaDebut|date('Y-m-d') : '' }}</td>
             </tr>
             <tr>
-                <th>UtilisateurId</th>
-                <td>{{ reservation.utilisateurId }}</td>
+                <th>UserId</th>
+                <td>{{ reservation.userId }}</td>
             </tr>
             <tr>
                 <th>DossierResa</th>
