--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -19,8 +19,8 @@
                 <td>{{ categorie.id }}</td>
                 <td>{{ categorie.nom }}</td>
                 <td>
-                    <a href="{{ path('app_categorie_show', {'id': categorie.id}) }}">Voir</a>
-                    <a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
+                    <button><a href="{{ path('app_categorie_show', {'id': categorie.id}) }}">Voir</a></button>
+                    <button><a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a></button>
                 </td>
             </tr>
         {% else %}
@@ -31,5 +31,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_categorie_new') }}">Créez votre catégorie.</a>
+    <button><a href="{{ path('app_categorie_new') }}">Créez votre catégorie.</a></button>
 {% endblock %}
