--- a/templates/visite/index.html.twig
+++ b/templates/visite/index.html.twig
@@ -9,22 +9,22 @@
         <thead>
             <tr>
                 {# <th>Id</th> #}
-                <th>DateVisite</th>
-                {# <th>UtilisateurId</th> #}
-                <th>DateResaSouhaite</th>
-                <th>actions</th>
+                <th>Pseudo</th>
+                <th>Date de Visite</th>
+                <th>Date de réservation souhaitée</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for visite in visites %}
             <tr>
-                <td>{{ visite.id }}</td>
-                <td>{{ visite.dateVisite ? visite.dateVisite|date('Y-m-d') : '' }}</td>
-                {# <td>{{ visite.utilisateurId }}</td> #}
-                <td>{{ visite.dateResaSouhaite ? visite.dateResaSouhaite|date('Y-m-d') : '' }}</td>
+                {# <td>{{ visite.id }}</td> #}
+                <td>{{ visite.user.pseudo }}</td>
+                <td>{{ visite.dateVisite ? visite.dateVisite|date('d/m/Y') : '' }}</td>
+                <td>{{ visite.dateResaSouhaite ? visite.dateResaSouhaite|date('d/m/Y') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_visite_show', {'id': visite.id}) }}">Voir</a>
-                    <a href="{{ path('app_visite_edit', {'id': visite.id}) }}">Modifier</a>
+                    <button><a href="{{ path('app_visite_show', {'id': visite.id}) }}">Voir</a></button>
+                    <button><a href="{{ path('app_visite_edit', {'id': visite.id}) }}">Modifier</a></button>
                 </td>
             </tr>
         {% else %}
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_visite_new') }}">Réservez votre visite maintenant.</a>
+    <button><a href="{{ path('app_visite_new') }}">Réservez votre visite maintenant.</a></button>
 {% endblock %}
