--- a/templates/categorie/new.html.twig
+++ b/templates/categorie/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('categorie/_form.html.twig') }}
 
-    <a href="{{ path('app_categorie_index') }}">Retour à la liste</a>
+    <button><a href="{{ path('app_categorie_index') }}">Retour à la liste</a></button>
 {% endblock %}
