--- a/templates/categorie/show.html.twig
+++ b/templates/categorie/show.html.twig
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_categorie_index') }}">Retour à la liste</a>
+    <button><a href="{{ path('app_categorie_index') }}">Retour à la liste</a></button>
 
-    <a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
+    <button><a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a></button>
 
     {{ include('categorie/_delete_form.html.twig') }}
 {% endblock %}
