--- a/templates/option/_form.html.twig
+++ b/templates/option/_form.html.twig
@@ -1,4 +1,6 @@
+<form class="form-container" method="POST">
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
+</form>
