--- a/templates/option/show.html.twig
+++ b/templates/option/show.html.twig
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_option_index') }}">Retour à la liste</a>
+    <button><a href="{{ path('app_option_index') }}">Retour à la liste</a></button>
 
-    <a href="{{ path('app_option_edit', {'id': option.id}) }}">Modifier</a>
+    <button><a href="{{ path('app_option_edit', {'id': option.id}) }}">Modifier</a></button>
 
     {{ include('option/_delete_form.html.twig') }}
 {% endblock %}
