--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouvel utilisateur{% endblock %}
 
 {% block body %}
-<form class="form-container">
+<form class="form-container" method="POST">
     <h1>S'inscrire</h1>
     {{ form_errors(registrationForm) }}
 
