--- a/templates/reservation/_form.html.twig
+++ b/templates/reservation/_form.html.twig
@@ -1,4 +1,7 @@
+
+<form class="form-container" method="POST">
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Enregistrer') }}</button>
+    <button>{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
+</form>
