--- a/templates/reservation/edit.html.twig
+++ b/templates/reservation/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('reservation/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('app_reservation_index') }}">Retour à la liste</a>
+    <button><a href="{{ path('app_reservation_index') }}">Retour à la liste</a></button>
 
     {{ include('reservation/_delete_form.html.twig') }}
 {% endblock %}
