--- a/templates/reservation/new.html.twig
+++ b/templates/reservation/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('reservation/_form.html.twig') }}
 
-    <a href="{{ path('app_reservation_index') }}">Retour à la liste</a>
+    <button><a href="{{ path('app_reservation_index') }}">Retour à la liste</a></button>
 {% endblock %}
