--- a/templates/reservation/show.html.twig
+++ b/templates/reservation/show.html.twig
@@ -1,46 +1,62 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Votre réservation{% endblock %}
+{% block title %}Votre réservation
+{% endblock %}
 
 {% block body %}
-    <h1>Votre réeservation</h1>
+	<h1>Votre réservation</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ reservation.id }}</td>
-            </tr>
-            <tr>
-                <th>DateResaDebut</th>
-                <td>{{ reservation.dateResaDebut ? reservation.dateResaDebut|date('Y-m-d') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UserId</th>
-                <td>{{ reservation.userId }}</td>
-            </tr>
-            <tr>
-                <th>DossierResa</th>
-                <td>{{ reservation.dossierResa }}</td>
-            </tr>
-            <tr>
-                <th>Acompte</th>
-                <td>{{ reservation.acompte ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>Caution</th>
-                <td>{{ reservation.caution ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>CategorieId</th>
-                <td>{{ reservation.categorieId }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			{# <tr>
+						                <th>Id</th>
+						                <td>{{ reservation.id }}</td>
+						            </tr> #}
+			<tr>
+				<th>Pseudo</th>
+				<td>{{ reservation.user.pseudo }}</td>
+			</tr>
+			<tr>
+				<th>Début de réservation</th>
+				<td>{{ reservation.dateResaDebut ? reservation.dateResaDebut|date('Y-m-d') : '' }}</td>
+			</tr>
+			<tr>
+				<th>Fin de réservation</th>
+				<td>{{ reservation.dateResaFin ? reservation.dateResaFin|date('Y-m-d') : '' }}</td>
+			</tr>
+			<tr>
+				<th>Dossier n°
+				</th>
+				<td>{{ reservation.dossierResa }}</td>
+			</tr>
+			<tr>
+				<th>Acompte</th>
+				<td>{{ reservation.acompte ? 'Oui' : 'Non' }}</td>
+			</tr>
+			<tr>
+				<th>Caution</th>
+				<td>{{ reservation.caution ? 'Oui' : 'Non' }}</td>
+			</tr>
+			<tr>
+				<th>Categorie</th>
+				<td>{{ reservation.categorie.nom }}</td>
+			</tr>
+			<tr>
+				<th>Option</th>
+				<td>
+					{% for option in reservation.options %}
+						{{ option.nom }}
+					{% else %}
+						Aucune option
+					{% endfor %}
+				</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_reservation_index') }}">Retour à la liste</a>
+	<a href="{{ path('app_reservation_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_reservation_edit', {'id': reservation.id}) }}">Modifier</a>
+	<a href="{{ path('app_reservation_edit', {'id': reservation.id}) }}">Modifier</a>
 
-    {{ include('reservation/_delete_form.html.twig') }}
+	{{ include('reservation/_delete_form.html.twig') }}
 {% endblock %}
