--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,7 +9,7 @@
         {% endif %}
 
         {% if app.user %}
-            <div class="mb-3">
+            <div>
                 Vous êtes connecté(e) en tant que  {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
             </div>
         {% endif %}
@@ -25,7 +25,7 @@
             {# Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
             See https://symfony.com/doc/current/security/remember_me.html #}
 
-            <div class="checkbox mb-3">
+            <div>
                 <input type="checkbox" name="_remember_me" id="_remember_me">
                 <label for="_remember_me">Se rappeler de moi</label>
             </div>
