panel admin, annulation reservation en cours

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,29 +5,30 @@
 
 {% block body %}
 	<div class="conteneur-flex">
-	<div class="hero-section">
-		<div class="hero-content">
-			<h1>Titre percutant pour votre site</h1>
-			<p>"La Salle de la Thérèsière : un cadre élégant et fonctionnel pour tous vos événements, privés et professionnels."</p>
-			<button>
-				<a href="{{ path('app_reservation_index') }}">Réservation</a>
-			</button>
+		<div class="hero-section">
+			<div class="hero-content">
+				<h1>Titre percutant pour votre site</h1>
+				<p>"La Salle de la Thérèsière : un cadre élégant et fonctionnel pour tous vos événements, privés et professionnels."</p>
+				<button>
+					<a href="{{ path('app_reservation_index') }}">Réservation</a>
+				</button>
+			</div>
 		</div>
-	</div>
-    <div class="bloc">
-		<div id="bloc1">
-			<P>"Une visite vaut mille mots. Venez découvrir la Salle de la Thérésiére."</P>
+		<div class="bloc">
+			<div id="bloc1">
+				<P>"Une visite vaut mille mots.<br>
+					Venez découvrir la Salle de la Thérésiére."</P>
+			</div>
+			<div id="bloc2">
+				<P>"Ne laissez pas votre date s'envoler. Réservez la Salle de la Thérésiére maintenant  !"</P>
+			</div>
+			<div id="bloc3">
+				<P>"Simplicité et efficacité. Profitez d'une cuisine équipéé, de sanitaires soignés et d'un accès PMR à la Salle de la Thérésiére, un lieu conçu pour tous."</P>
+			</div>
+			<div id="bloc4">
+				<P>"Ce qui se passe à la Salle de la Thérésiére : découvrez nos actualités."</P>
+			</div>
 		</div>
-		<div id="bloc2">
-			<P>"Ne laissez pas votre date s'envoler. Réservez la Salle de la Thérésiére maintenant  !"</P>
-		</div>
-		<div id="bloc3">
-			<P>"Simplicité et efficacité. Profitez d'une cuisine équipéé, de sanitaires soignés et d'un accès PMR à la Salle de la Thérésiére, un lieu conçu pour tous."</P>
-		</div>
-		<div id="bloc4">
-			<P>"Ce qui se passe à la Salle de la Thérésiére : découvrez nos actualités."</P>
-		</div>
-        </div>
 	</div>
 
 
